Added some basic user account management stuff to the CIS API
